2009-10-01  Xavier Perseguers  <typo3@perseguers.ch>

	* Raised version to 0.9.22

2009-09-29  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #12071: t3lib_sqlparser is not able to parse alias of a joined table

2009-09-20  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #12012: admin_get_tables() method is using PHP5.3-deprecated function mysql_list_tables

2009-09-18  Xavier Perseguers  <typo3@perseguers.ch>

	* Raised version to 0.9.21

2009-09-18  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #11984: Remove reference operators for objects

2009-09-03  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #11436: Unknown tables break Install-Tool (Thanks to David Bruchmann)
	* Fixed bug #11108: DBAL wildly quotes fields and table names

2009-09-04  Karsten Dambekalns <karsten@typo3.org>

	* Raised version to 0.9.20

2008-02-04  Michael Stucki  <michael@typo3.org>

	* Fixed bug #7295: Uninitialized variable in ->handler_getFromTableList() (Patch by Oliver Klee)

2007-05-30  Karsten Dambekalns <karsten@typo3.org>

	* Added default values and some usability improvements to cached info display in debug module (closes bug #3750)
	* EXPLAIN PLAN support for Oracle (closes bug #3850)
	* Fixed a warning when using admin_get_fields() on a non-existent table
	* Fixed a bug causing inserts with more than one affected CLOB field to fail
	* quoteWhereClause() now die()s when the input cannot be parsed by parseWhereClause()
	* PHP backtraces can be logged with the queries now (closes bug #3856)

2007-05-29  Karsten Dambekalns <karsten@typo3.org>

	* Closes bug #4462: creates tables without OIDs on PostgreSQL now
	* Closes bugs #4494, #3759: & is translated to BITAND() on Oracle now
	* Large text fields are CLOB fields now; for Oracle LIKE comparisons against such fields are translated to dbms_lob.instr() calls. This should fix e.g. bug #5535 as well as issues with TV data that cannot be unserialized (see comments on bug #4638)
	* Updates to the manual