@@ -1,3 +1,7 @@
+2009-10-08  Xavier Perseguers  <typo3@perseguers.ch>
+
+	Fixed bug #6953: Mapping of fieldnames in SQL-functions like MIN(), MAX() or SUM() does not work (Thanks to Christian and Michael Miousse)
+
 2009-10-01  Xavier Perseguers  <typo3@perseguers.ch>
 
 	* Raised version to 0.9.22
